[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/TBD/TBD.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/tilemap/tilemap.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/tbd_gameplay/CollisionShape2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/timer/TimerScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://common_assets/textures/2DLight.png" type="Texture" id=5]
[ext_resource path="res://scenes/tbd_gameplay/TBDPlayer.gd" type="Script" id=6]
[ext_resource path="res://scenes/timer/TimerRect.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/tbd_gameplay/NavigationPolygonInstance.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/tbd_gameplay/Sprite.gd" type="Script" id=9]
[ext_resource path="res://scenes/tbd_gameplay/Sprite.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/tilemap/tilemap.gd" type="Script" id=11]
[ext_resource path="res://scenes/tbd_gameplay/ReaperAnimation.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/tbd_gameplay/PlayerReaper.gd" type="Script" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 51.625

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.8878, 38.7916 )

[node name="TBDPlayer" type="Node2D"]
script = ExtResource( 6 )

[node name="tilemap" parent="." instance=ExtResource( 2 )]
script = ExtResource( 11 )

[node name="CanvasModulate" type="CanvasModulate" parent="tilemap"]
visible = false
color = Color( 0, 0, 0, 1 )

[node name="TBD" parent="tilemap" instance=ExtResource( 1 )]
position = Vector2( 736.667, 514.529 )
scale = Vector2( 0.661686, 0.570881 )

[node name="TimerRect" parent="tilemap/TBD" instance=ExtResource( 7 )]
margin_left = -322.683
margin_top = -284.068
margin_right = 14.3173
margin_bottom = -230.068

[node name="PlayerCamera" type="Camera2D" parent="tilemap/TBD"]
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="Light2D" type="Light2D" parent="tilemap/TBD"]
texture = ExtResource( 5 )
texture_scale = 2.0
energy = 1.25
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="TBDArea" type="Area2D" parent="tilemap/TBD"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tilemap/TBD/TBDArea"]
position = Vector2( -12.8077, 0.353455 )
shape = SubResource( 1 )

[node name="Navigation2D" type="Navigation2D" parent="tilemap"]

[node name="NavigationPolygonInstance" parent="tilemap/Navigation2D" instance=ExtResource( 8 )]

[node name="Player" parent="tilemap" instance=ExtResource( 10 )]
position = Vector2( 240, 327 )
scale = Vector2( 0.578948, 0.619835 )
texture = null
script = ExtResource( 9 )

[node name="PlayerReaper" type="KinematicBody2D" parent="tilemap/Player"]
script = ExtResource( 13 )

[node name="CollisionShape2D" parent="tilemap/Player/PlayerReaper" instance=ExtResource( 3 )]

[node name="Sprite" parent="tilemap/Player/PlayerReaper" instance=ExtResource( 10 )]
frame = 0

[node name="ReaperAnimation" parent="tilemap/Player/PlayerReaper" instance=ExtResource( 12 )]

[node name="TimerScene" parent="." instance=ExtResource( 4 )]

[node name="ExitArea" type="Area2D" parent="."]

[node name="ExitCollision" type="CollisionShape2D" parent="ExitArea"]
position = Vector2( 1623.32, 1126.82 )
shape = SubResource( 2 )
[connection signal="body_entered" from="tilemap/TBD/TBDArea" to="." method="_on_TBDArea_body_entered"]
[connection signal="body_entered" from="ExitArea" to="." method="_on_ExitArea_body_entered"]
